--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!--    <link rel="stylesheet" href="https://s3-ap-southeast-1.amazonaws.com/ecm-prd-pub/kfestival/assets/front/css/bootstrap.css" >-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- <link rel="stylesheet" href="./assets/front/css/style.css"> -->
+<link rel="stylesheet" href="./assets/front/css/style.css">
 
-<link rel="stylesheet" href="https://s3-ap-southeast-1.amazonaws.com/ecm-prd-pub/kfestival/assets/front/css/style.css" >
+<!-- <link rel="stylesheet" href="https://s3-ap-southeast-1.amazonaws.com/ecm-prd-pub/kfestival/assets/front/css/style.css" > -->
 
 
 
@@ -75,7 +75,7 @@
     </div>
 </div> -->
 
-<!-- <script src="./assets/plugins/js/jquery-1.12.4.js"></script> -->
+<script src="./assets/plugins/js/jquery-1.12.4.js"></script>
 
 <script src="https://s3-ap-southeast-1.amazonaws.com/ecm-prd-pub/kfestival/assets/front/js/jquery.validate.min.js"></script>
 <script src="https://s3-ap-southeast-1.amazonaws.com/ecm-prd-pub/kfestival/assets/front/js/additional-methods.min.js"></script>
@@ -87,15 +87,15 @@
 
 
 <!-- Router Scripts -->
-<!-- <script src="./router/route.js"></script>
+<script src="./router/route.js"></script>
 <script src="./router/router-dev.js"></script>
-<script src="./router/app.js"></script> -->
+<script src="./router/app.js"></script>
 
-<script src="https://ecm-prd-pub.s3.ap-southeast-1.amazonaws.com/kfestival/router/route.js"></script>
+<!-- <script src="https://ecm-prd-pub.s3.ap-southeast-1.amazonaws.com/kfestival/router/route.js"></script>
 <script src="https://ecm-prd-pub.s3.ap-southeast-1.amazonaws.com/kfestival/router/router.js"></script>
-<script src="https://ecm-prd-pub.s3.ap-southeast-1.amazonaws.com/kfestival/router/app.js"></script>
+<script src="https://ecm-prd-pub.s3.ap-southeast-1.amazonaws.com/kfestival/router/app.js"></script> -->
 <!-- End of Router Scripts -->
 
-<!-- <script defer src="./assets/front/js/script.js"></script> -->
+<script defer src="./assets/front/js/script.js"></script>
 
-<script defer src="https://ecm-prd-pub.s3.ap-southeast-1.amazonaws.com/kfestival/assets/front/js/script.js"></script>
+<!-- <script defer src="https://ecm-prd-pub.s3.ap-southeast-1.amazonaws.com/kfestival/assets/front/js/script.js"></script> -->
